--- a/hello.html
+++ b/hello.html
@@ -2,7 +2,7 @@
 <body id='canvas' bgcolor="red">
     <script>
         window. onload = function(){
-            var col = ('red', "green','blue'];
+            var col = ('red','green','blue'];
             var num = Math.floor (Math. random() * 3);
             document.getElementById('canvas').bgColor = col[num];
         }:
