--- a/hello.html
+++ b/hello.html
@@ -1,8 +1,8 @@
 <html>
 <body id='canvas' bgcolor="red">
     <script>
-        window. onload = function(){
-            var col = ('red','green','blue'];
+        window.onload = function(){
+            var col = ['red','green','blue'];
             var num = Math.floor (Math. random() * 3);
             document.getElementById('canvas').bgColor = col[num];
         };
