--- a/hello.html
+++ b/hello.html
@@ -1,5 +1,6 @@
+<!doctype html>
 <html>
-<body id='canvas' bgcolor="red">
+<body id="canvas" bgcolor="red">
     <script>
         window.onload = function(){
             var col = ['red','green','blue'];
